test-data/error/no-version.hltas
frames
----------|------|------|0.001|-|-|1
